<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <Button
        android:id="@+id/twofactorauth_choice_sms"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/nunito_medium"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/auth_by_sms_to_x"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="18sp"
        app:icon="@drawable/sms_24px"
        app:iconSize="24dp"
        app:iconTint="?attr/colorOnSurfaceVariant" />

</layout>