...
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/twofactorauth_textinput_1"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
...
